--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,3 @@
 DATABASE_URL=postgresql://postgres:postgres@db:5432/confrec
 SENTENCE_MODEL=sentence-transformers/all-MiniLM-L6-v2
+AGENDA_URL=https://example.com/agenda
