wrong user: needs whoami command

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 # For Docker Compose the hostname is 'db'. When running locally change 'db'
 # to 'localhost'.
-DATABASE_URL=postgresql://postgres:postgres@db:5432/confrec
+DATABASE_URL=postgresql://$(whoami):postgres@db:5432/confrec
 SENTENCE_MODEL=sentence-transformers/all-MiniLM-L6-v2
 AGENDA_URL=https://example.com/agenda
